--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Willkommen zur eingebetteten Webseite!</h1>
-    <p>Diese Seite verwendet eingebettetes HTML, CSS und JavaScript in einer WPF-Anwendung.</p>
-    <button onclick="showMessage()">Klicke mich</button>
+    <h1>In progress updates follow</h1>
+    <p>progress = 30%</p>
+    <button onclick="showMessage()">Reload</button>
     <script src="script.js"></script>
 </body>
 </html>
